--- a/test24.html
+++ b/test24.html
@@ -58,33 +58,33 @@
                 <option value="">--Choose Destination--</option>
                 <optgroup label="Buildings">
                     <option value="library">Library</option>
-                    <option value="soe-block">soe-block</option>
+                    <option value="soe-block">SOE-Block</option>
                     <option value="cdsimer">CDSIMER Block</option>
-                    <option value="mechanical block">mechanical block</option>
-                    <option value="CDSIMER staff Quarters">CDSIMER staff Quarters</option>
-                    <option value="P-block(psychiatry block)">P-block(psychiatry block)</option>
-                    <option value="collage of physiotherapy">collage of physiotherapy</option>
-                    <option value="nurses quarters">nurses quarters</option>
-                    <option value="girls hostel">girls hostel</option>
-                    <option value="boys hostel">boys hostel</option>
-                    <option value="emergency ward">emergency ward</option>
+                    <option value="mechanical block">Mechanical Block</option>
+                    <option value="CDSIMER staff Quarters">CDSIMER Staff Quarters</option>
+                    <option value="P-block(psychiatry block)">P-block(Psychiatry Block)</option>
+                    <option value="collage of physiotherapy">College of Physiotherapy</option>
+                    <option value="nurses quarters">Nurses Quarters</option>
+                    <option value="girls hostel">Girls Hostel</option>
+                    <option value="boys hostel">Boys Hostel</option>
+                    <option value="emergency ward">Emergency Ward</option>
                 </optgroup>
                 <optgroup label="Amenities">
-                    <option value="cricket ground">cricket ground</option>
-                    <option value="footbal ground">footbal ground</option>
-                    <option value="basketball cort">basketball cort</option>
-                    <option value="arena">arena</option>
-                    <option value="lake view">lake view</option>
-                    <option value="car-parking">car-Parking</option>
-                    <option value="bike-parking">bike-Parking</option>
+                    <option value="cricket ground">Cricket Ground</option>
+                    <option value="footbal ground">FootbalL Ground</option>
+                    <option value="basketball cort">Basketball CoUrt</option>
+                    <option value="arena">Arena</option>
+                    <option value="lake view">Lake View</option>
+                    <option value="car-parking">Car-Parking</option>
+                    <option value="bike-parking">Bike-Parking</option>
                 </optgroup>
                 <optgroup label="campus dining">
-                    <option value="tummy trails">tummy trails</option>
-                    <option value="food truck">food truck</option>
+                    <option value="tummy trails">Tummy Trails</option>
+                    <option value="food truck">Food Truck</option>
                     <option value="Cafeteria">Cafeteria</option>
-                    <option value="grains and gossip">grains and gossip</option>
-                    <option value="canteen">canteen</option>
-                    <option value="hostel mess">hostel mess</option>
+                    <option value="grains and gossip">Grains and Gossip</option>
+                    <option value="canteen">Canteen</option>
+                    <option value="hostel mess">Hostel Mess</option>
                 </optgroup>
             </select>
         </select>
