--- a/test24.html
+++ b/test24.html
@@ -71,8 +71,8 @@
                 </optgroup>
                 <optgroup label="Amenities">
                     <option value="cricket ground">Cricket Ground</option>
-                    <option value="footbal ground">FootbalL Ground</option>
-                    <option value="basketball cort">Basketball CoUrt</option>
+                    <option value="footbal ground">Football Ground</option>
+                    <option value="basketball cort">Basketball Court</option>
                     <option value="arena">Arena</option>
                     <option value="lake view">Lake View</option>
                     <option value="car-parking">Car-Parking</option>
