--- a/test24.html
+++ b/test24.html
@@ -48,8 +48,12 @@
             <select id="start-location">
                 <option value="">Current Location</option>
                 <option value="main-entrance">Main Entrance</option>
+                <option value="soe-block">SOE-Block</option>
+                <option value="cdsimer">CDSIMER Block</option>
                 <option value="canteen">Canteen</option>
-                <option value="library">Library</option>
+                <option value="girls hostel">Girls Hostel</option>
+                <option value="boys hostel">Boys Hostel</option>
+                <option value="cricket ground">Cricket Ground</option>
                 <!-- Add more starting points -->
             </select>
 <br>
